# OpenGL_CarGUI_Qt_Cpp

./: CMakeLists.txt  README.md  drawing.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  res.qrc
json/: result_vec.json  result_vec_ordered.json
src/: config.cpp  config.h  drawing.cpp  glad.cpp  mainwindow.cpp
src/controller/: app.cpp  app.h  drawing.cpp
src/factories/: factory.cpp  factory.h
src/shaders/: fragment_base.frag  fragment_ego.frag  fragment_ego_2.frag  fragment_ego_uni.frag  vertex_base.vert  vertex_ego.vert
src/systems/: camera_system.cpp  camera_system.h  render_system.cpp  render_system.h
src/threads/: socket_thread.cpp  socket_thread.h
src/view/: shader.cpp  shader.h
